--- a/src/main/resources/templates/customer-template/about.html
+++ b/src/main/resources/templates/customer-template/about.html
@@ -96,7 +96,10 @@
               <ul class="nav nav-pills" style="margin-left: 54%">
                 <li class="nav-item dropdown" th:if="${checkDangNhap=='true'}">
                   <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#"
-                     role="button" aria-expanded="false"><span class="icon icon-person"></span></a>
+                     role="button" aria-expanded="false">
+                    <!-- Updated person icon -->
+                    <i class="fa-solid fa-user"></i>
+                  </a>
                   <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="/user/thong-tin-khach-hang">Tài Khoản Của
                       Tôi</a>
@@ -107,19 +110,19 @@
                 </li>
                 <li class="nav-item dropdown" th:if="${checkDangNhap=='false'}">
                   <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#"
-                     role="button" aria-expanded="false"><span class="icon icon-person"></span></a>
+                     role="button" aria-expanded="false">
+                    <!-- Updated person icon -->
+                    <i class="fa-solid fa-user"></i>
+                  </a>
                   <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="/login">Đăng Nhập</a></li>
-
                   </ul>
                 </li>
 
-                <!--                                <li class="nav-item" style="margin-left: -15%">-->
-                <!--                                    <a class="nav-link" href="#"><span class="icon icon-heart-o"></span></a>-->
-                <!--                                </li>-->
                 <li class="nav-item" style="margin-top: 5%;margin-left: -5%">
                   <a class="site-cart" href="/user/cart">
-                    <span class="icon icon-shopping_cart"></span>
+                    <!-- Updated shopping cart icon -->
+                    <i class="fa-solid fa-cart-shopping"></i>
                     <span class="count" th:if="${checkDangNhap=='true'}"
                           th:text="${soLuongSPGioHangCT}"></span>
                   </a>
@@ -135,27 +138,9 @@
         <ul class="site-menu js-clone-nav d-none d-md-block">
           <li>
             <a href="/home">Trang chủ</a>
-            <!-- <ul class="dropdown">
-        <li><a href="#">Menu One</a></li>
-        <li><a href="#">Menu Two</a></li>
-        <li><a href="#">Menu Three</a></li>
-        <li class="has-children">
-          <a href="#">Sub Menu</a>
-          <ul class="dropdown">
-            <li><a href="#">Menu One</a></li>
-            <li><a href="#">Menu Two</a></li>
-            <li><a href="#">Menu Three</a></li>
-          </ul>
-        </li>
-      </ul> -->
+
           </li>
 
-
-          <!-- <ul class="dropdown">
-      <li><a href="#">Menu One</a></li>
-      <li><a href="#">Menu Two</a></li>
-      <li><a href="#">Menu Three</a></li>
-    </ul> -->
 
           <li><a href="/shop">Sản phẩm</a></li>
           <li><a href="/about">Về chúng tôi</a></li>
